--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 </head>
 <body class="home">
     <div class="background">
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo">
         <div class="container">
             <h1>Ticket Analysis</h1>
             <form method="post" enctype="multipart/form-data">
