--- a/templates/index_resolved.html
+++ b/templates/index_resolved.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="background">
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo">
         <div class="container">
             <h1>Resolved Ticket Analysis</h1>
             <h2>Total Resolved Tickets: {{ total_resolved_tickets }}</h2>
